--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     prefer_const_constructors: ignore
+    prefer_final_fields: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
