--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,10 @@ dependencies:
   intl: ^0.20.2
   supabase_flutter: ^2.8.4
   image_picker: ^1.1.2
-
+  dropdown_textfield: ^1.2.0
+  calendar_date_picker2: ^1.1.9
+  http: ^1.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
