--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,6 +11,7 @@ analyzer:
   errors:
     prefer_const_constructors: ignore
     prefer_final_fields: ignore
+    unnecessary_import: ignore
     use_build_context_synchronously: ignore
 include: package:flutter_lints/flutter.yaml
 
