--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,10 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    non_constant_identifier_names: ignore
     prefer_const_constructors: ignore
+    prefer_const_constructors_in_immutables: ignore
+    prefer_const_literals_to_create_immutables: ignore
     prefer_final_fields: ignore
     unnecessary_import: ignore
     use_build_context_synchronously: ignore
