--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   dropdown_textfield: ^1.2.0
   calendar_date_picker2: ^2.0.0
   http: ^1.3.0
+  signature: ^6.0.0
   
 dev_dependencies:
   flutter_test:
