--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   calendar_date_picker2: ^2.0.0
   http: ^1.3.0
   signature: ^5.5.0
+  provider: ^6.1.2
   
 dev_dependencies:
   flutter_test:
