--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,13 @@ dependencies:
   calendar_date_picker2: ^2.0.0
   http: ^1.3.0
   signature: ^5.5.0
+  googleapis: ^11.0.0
+  googleapis_auth: ^1.4.0
+  url_launcher: ^6.1.12
+  flutter_web_auth: ^0.5.0
+  flutter_secure_storage: ^4.2.1
+  flutter_web_auth_2: ^4.1.0
+  google_sign_in: ^6.3.0
   
 dev_dependencies:
   flutter_test:
