--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   flutter_web_auth_2: ^4.1.0
   google_sign_in: ^6.3.0
   provider: ^6.1.2
+  printing: ^5.14.2
+  pdf: ^3.11.3
+  share_plus: ^10.1.4
+  csv: ^6.0.0
+  universal_html: ^2.2.4
   
 dev_dependencies:
   flutter_test:
