--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   share_plus: ^10.1.4
   csv: ^6.0.0
   universal_html: ^2.2.4
+  fl_chart: ^0.70.2
+  
   
 dev_dependencies:
   flutter_test:
