--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   dartx: ^1.2.0
   flutter_staggered_grid_view: ^0.7.0
   toastification: ^3.0.2
+  tab_container: ^3.5.3
   
   
 dev_dependencies:
