--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   toastification: ^3.0.2
   tab_container: ^3.5.3
+  fluttertoast: ^8.2.12
+  shared_preferences: ^2.5.3
+  flutter_reorderable_list: ^1.3.1
   
   
 dev_dependencies:
