--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   fluttertoast: ^8.2.12
   shared_preferences: ^2.5.3
   flutter_reorderable_list: ^1.3.1
+  path_provider: ^2.1.5
+  file_picker: ^10.1.2
   
   
 dev_dependencies:
