--- a/firebase.json
+++ b/firebase.json
@@ -24,6 +24,11 @@
   },
   "hosting": {
     "public": "build/web",
+     "rewrites": [
+      { "source": "/privacy-policy", "destination": "/privacy-policy.html" },
+      { "source": "/terms-of-service", "destination": "/terms-of-service.html" },
+      { "source": "**", "destination": "/index.html" }
+     ],
     "ignore": [
       "firebase.json",
       "**/.*",
